[tool.poetry]
name = "waldur-docs"
version = "0.1.0"
description = ""
authors = ["OpenNode Team <info@opennodecloud.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "plugins"}]

[tool.poetry.plugins."mkdocs.plugins"]
external_doc_plugin = "plugins.external_doc_plugin:ExternalDocPlugin"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = ">=7.3.1"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-print-site-plugin = "^2.6.0"
mkdocs-render-swagger-plugin = "^0.1.2"
mkdocs-glightbox = "^0.4.0"
pymdown-extensions = "^10.12"
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-video = "^1.5.0"
mike="^2.1.3"
mkdocs-unused-files = "^0.2.0"
mkdocs-include-markdown-plugin = "^7.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
