[project]
name = "waldur-docs"
version = "0.1.0"
description = ""
authors = [{name = "OpenNode Team", email = "info@opennodecloud.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=7.3.1",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocs-print-site-plugin>=2.6.0",
    "mkdocs-render-swagger-plugin>=0.1.2",
    "mkdocs-glightbox>=0.4.0",
    "pymdown-extensions>=10.12",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocs-video>=1.5.0",
    "mike>=2.1.3",
    "mkdocs-unused-files>=0.2.0",
    "mkdocs-include-markdown-plugin>=7.1.7",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
